--- a/style/sass.css
+++ b/style/sass.css
@@ -4362,25 +4362,40 @@ body {
 .body__index .conten_setion_uno .titulo_setion_uno .boton_setion_uno {
   display: flex;
   flex-direction: row;
-  gap: 0px;
+  gap: 1em;
 }
-.body__index .conten_setion_uno .titulo_setion_uno .boton_setion_uno .boton_setion_uno_contactame {
+.body__index .conten_setion_uno .titulo_setion_uno .boton_setion_uno .boton_setion_uno_see {
   display: flex;
-  width: 201px;
-  padding: 15px;
+  width: 10em;
+  padding: 10px;
   justify-content: center;
   align-items: center;
   gap: 10px;
-  align-self: stretch;
   border-radius: 10px;
+  border: 1px solid #24252B;
   background: #ffffff;
   color: #000;
-  font-family: MargoBeuys;
+  font-family: Gotham;
   font-size: 15px;
   font-style: normal;
-  font-weight: 600;
-  line-height: 107.5%;
-  /* 16.125px */
+  font-weight: 300;
+  line-height: normal;
+}
+.body__index .conten_setion_uno .titulo_setion_uno .boton_setion_uno .boton_setion_uno_contac {
+  display: flex;
+  width: 10em;
+  padding: 10px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  color: #FFF;
+  font-family: poppins;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  border-radius: 10px;
+  background: #141414;
 }
 .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores {
   display: flex;
@@ -4439,21 +4454,18 @@ body {
   overflow: hidden;
 }
 .body__index .fondo_inicio .bold_uno {
-  display: none;
   position: absolute;
   top: -400px;
   left: -300px;
   animation: 5s infinite linear gradienanimate;
 }
 .body__index .fondo_inicio .bold_dos {
-  display: none;
   position: absolute;
   top: 10px;
   left: -200px;
   animation: 5s infinite linear gradienanimate;
 }
 .body__index .fondo_inicio .bold_tres {
-  display: none;
   position: absolute;
   bottom: -600px;
   right: -400px;
@@ -4463,10 +4475,10 @@ body {
   z-index: 5;
   width: 100vw;
   height: 100%;
-  background: repeating-radial-gradient(rgba(255, 255, 255, 0.1) 0 0.0001%, rgba(231, 231, 231, 0.2745098039) 0 0.0002%) 60% 60%/3000px 3000px, repeating-conic-gradient(rgba(255, 255, 255, 0.1) 0 0.0001%, rgba(231, 231, 231, 0.2745098039) 0 0.0002%) 40% 40%/3000px 3000px;
+  background: repeating-radial-gradient(rgba(255, 230, 6, 0.2) 0 0.0001%, rgba(209, 209, 209, 0.2745098039) 0 0.0002%) 60% 60%/3000px 3000px, repeating-conic-gradient(rgba(255, 230, 6, 0.2) 0 0.0001%, rgba(209, 209, 209, 0.2745098039) 0 0.0002%) 40% 40%/3000px 3000px;
   background-blend-mode: difference;
-  -webkit-backdrop-filter: blur(0px);
-          backdrop-filter: blur(0px);
+  -webkit-backdrop-filter: blur(30px);
+          backdrop-filter: blur(30px);
 }
 .body__index .fondo_inicio .fondo_blur_movil {
   display: none;
@@ -5679,29 +5691,40 @@ body {
   .body__index .conten_setion_uno .titulo_setion_uno .boton_setion_uno {
     display: flex;
     flex-direction: row;
-    gap: 0px;
-    width: 100%;
+    gap: 1em;
   }
-  .body__index .conten_setion_uno .titulo_setion_uno .boton_setion_uno .boton_setion_uno_contactame {
+  .body__index .conten_setion_uno .titulo_setion_uno .boton_setion_uno .boton_setion_uno_see {
     display: flex;
-    width: 100%;
-    padding: 15px;
+    width: 10em;
+    padding: 10px;
     justify-content: center;
     align-items: center;
     gap: 10px;
-    align-self: stretch;
     border-radius: 10px;
+    border: 1px solid #24252B;
     background: #ffffff;
     color: #000;
-    font-family: MargoBeuys;
-    font-size: calc(1px + 3vw);
+    font-family: Gotham;
+    font-size: 15px;
     font-style: normal;
-    font-weight: 600;
-    line-height: 107.5%;
-    /* 16.125px */
+    font-weight: 300;
+    line-height: normal;
   }
-  .body__index .conten_setion_uno .titulo_setion_uno .boton_setion_uno img {
-    display: none;
+  .body__index .conten_setion_uno .titulo_setion_uno .boton_setion_uno .boton_setion_uno_contac {
+    display: flex;
+    width: 10em;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    color: #FFF;
+    font-family: poppins;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    border-radius: 10px;
+    background: #141414;
   }
   .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores {
     width: 100%;
@@ -5766,21 +5789,18 @@ body {
     overflow: hidden;
   }
   .body__index .fondo_inicio .bold_uno {
-    display: none;
     position: absolute;
     top: -400px;
     left: -300px;
     animation: 5s infinite linear gradienanimate;
   }
   .body__index .fondo_inicio .bold_dos {
-    display: none;
     position: absolute;
     top: 10px;
     left: -200px;
     animation: 5s infinite linear gradienanimate;
   }
   .body__index .fondo_inicio .bold_tres {
-    display: none;
     position: absolute;
     bottom: -600px;
     right: -400px;
@@ -7074,29 +7094,40 @@ body {
   .body__index .conten_setion_uno .titulo_setion_uno .boton_setion_uno {
     display: flex;
     flex-direction: row;
-    gap: 0px;
-    width: 100%;
+    gap: 1em;
   }
-  .body__index .conten_setion_uno .titulo_setion_uno .boton_setion_uno .boton_setion_uno_contactame {
+  .body__index .conten_setion_uno .titulo_setion_uno .boton_setion_uno .boton_setion_uno_see {
     display: flex;
-    width: 100%;
-    padding: 15px;
+    width: 10em;
+    padding: 10px;
     justify-content: center;
     align-items: center;
     gap: 10px;
-    align-self: stretch;
     border-radius: 10px;
+    border: 1px solid #24252B;
     background: #ffffff;
     color: #000;
-    font-family: MargoBeuys;
-    font-size: calc(1px + 5vw);
+    font-family: Gotham;
+    font-size: 15px;
     font-style: normal;
-    font-weight: 600;
-    line-height: 107.5%;
-    /* 16.125px */
+    font-weight: 300;
+    line-height: normal;
   }
-  .body__index .conten_setion_uno .titulo_setion_uno .boton_setion_uno img {
-    display: none;
+  .body__index .conten_setion_uno .titulo_setion_uno .boton_setion_uno .boton_setion_uno_contac {
+    display: flex;
+    width: 10em;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    color: #FFF;
+    font-family: poppins;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 300;
+    line-height: normal;
+    border-radius: 10px;
+    background: #141414;
   }
   .body__index .conten_setion_uno .titulo_setion_uno .cont_barra_contadores {
     width: 100%;
