--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -116,7 +116,7 @@
           align-items: center;
           gap: 10px;
           border-radius: 10px;
-          border: 1px solid #24252B;
+          border: 1px solid #24252b;
           background: #ffffff;
           color: #000;
           font-family: Gotham;
@@ -133,7 +133,7 @@
           justify-content: center;
           align-items: center;
           gap: 10px;
-          color: #FFF;
+          color: #fff;
           font-family: poppins;
           font-size: 15px;
           font-style: normal;
@@ -142,7 +142,6 @@
           border-radius: 10px;
           background: #141414;
         }
-
       }
 
       .cont_barra_contadores {
@@ -162,7 +161,8 @@
           align-items: center;
           gap: 10px;
 
-          img {}
+          img {
+          }
 
           h4 {
             color: #252525;
@@ -208,36 +208,44 @@
     width: 100vw;
     height: 120vh;
     overflow: hidden;
+    background: #ededed;
 
     .bold_uno {
       position: absolute;
       top: -400px;
       left: -300px;
-      animation: 5s infinite linear gradienanimate;
+      animation: 60s infinite linear gradienanimate;
     }
 
     .bold_dos {
       position: absolute;
       top: 10px;
       left: -200px;
-      animation: 5s infinite linear gradienanimate;
+      animation: 60s infinite linear gradienanimate;
     }
 
     .bold_tres {
+      transform: scale(1.5);
       position: absolute;
-      bottom: -600px;
+      bottom: -400px;
       right: -400px;
-      animation: 5s infinite linear gradienanimate;
+      animation: 60s infinite linear alternate-reverse gradienanimate;
     }
 
     .fondo_blur {
       z-index: 5;
       width: 100vw;
       height: 100%;
-      background: repeating-radial-gradient(rgba(255, 230, 6, 0.2) 0 0.0001%,
-          #d1d1d146 0 0.0002%) 60% 60%/3000px 3000px,
-        repeating-conic-gradient(rgba(255, 230, 6, 0.2) 0 0.0001%,
-          #d1d1d146 0 0.0002%) 40% 40%/3000px 3000px;
+      background: repeating-radial-gradient(
+            rgba(255, 230, 6, 0.2) 0 0.0001%,
+            #d1d1d146 0 0.0002%
+          )
+          60% 60%/3000px 3000px,
+        repeating-conic-gradient(
+            rgba(255, 230, 6, 0.2) 0 0.0001%,
+            #d1d1d146 0 0.0002%
+          )
+          40% 40%/3000px 3000px;
       background-blend-mode: difference;
       backdrop-filter: blur(30px);
     }
@@ -839,32 +847,38 @@
 
       .bold_uno {
         position: absolute;
-        top: -300px;
+        top: -100px;
         left: -200px;
-        animation: 10s infinite linear gradienanimate;
+        animation: 60s infinite linear gradienanimate;
       }
 
       .bold_dos {
         position: absolute;
         top: 10px;
-        left: -400px;
-        animation: 10s infinite linear gradienanimate;
+        left: -500px;
+        animation: 60s infinite linear reverse gradienanimate;
       }
 
       .bold_tres {
         position: absolute;
         bottom: -600px;
         right: -400px;
-        animation: 10s infinite linear gradienanimate;
+        animation: 60s infinite linear gradienanimate;
       }
 
       .fondo_blur {
         width: 100vw;
         height: 100%;
-        background: repeating-radial-gradient(rgba(255, 255, 255, 0.02) 0 0.0001%,
-            rgba(238, 255, 0, 0.247) 0 0.0005%) 60% 60%/3000px 3000px,
-          repeating-conic-gradient(rgba(255, 255, 255, 0.02) 0 0.0001%,
-            rgba(255, 189, 7, 0.247) 0 0.0005%) 40% 40%/3000px 3000px;
+        background: repeating-radial-gradient(
+              rgba(255, 255, 255, 0.02) 0 0.0001%,
+              rgba(238, 255, 0, 0.247) 0 0.0005%
+            )
+            60% 60%/3000px 3000px,
+          repeating-conic-gradient(
+              rgba(255, 255, 255, 0.02) 0 0.0001%,
+              rgba(255, 189, 7, 0.247) 0 0.0005%
+            )
+            40% 40%/3000px 3000px;
         background-blend-mode: difference;
         animation: b 0.5s infinite alternate;
         backdrop-filter: blur(30px);
@@ -1512,7 +1526,6 @@
   }
 }
 
-
 @media (max-width: 1000px) {
   .body__index {
     .conta_scroll_boton {
@@ -1623,7 +1636,7 @@
           display: flex;
           flex-direction: row;
           gap: 1em;
-  
+
           .boton_setion_uno_see {
             display: flex;
             width: 10em;
@@ -1632,7 +1645,7 @@
             align-items: center;
             gap: 10px;
             border-radius: 10px;
-            border: 1px solid #24252B;
+            border: 1px solid #24252b;
             background: #ffffff;
             color: #000;
             font-family: Gotham;
@@ -1641,7 +1654,7 @@
             font-weight: 300;
             line-height: normal;
           }
-  
+
           .boton_setion_uno_contac {
             display: flex;
             width: 10em;
@@ -1649,7 +1662,7 @@
             justify-content: center;
             align-items: center;
             gap: 10px;
-            color: #FFF;
+            color: #fff;
             font-family: poppins;
             font-size: 15px;
             font-style: normal;
@@ -1658,7 +1671,6 @@
             border-radius: 10px;
             background: #141414;
           }
-  
         }
 
         .cont_barra_contadores {
@@ -1734,21 +1746,21 @@
         position: absolute;
         top: -400px;
         left: -300px;
-        animation: 5s infinite linear gradienanimate;
+        animation: 60s infinite linear gradienanimate;
       }
 
       .bold_dos {
         position: absolute;
         top: 10px;
         left: -200px;
-        animation: 5s infinite linear gradienanimate;
+        animation: 60s infinite linear gradienanimate;
       }
 
       .bold_tres {
         position: absolute;
         bottom: -600px;
         right: -400px;
-        animation: 5s infinite linear gradienanimate;
+        animation: 60s infinite linear gradienanimate;
       }
 
       .fondo_blur_movil {
@@ -1757,8 +1769,6 @@
         width: 100vw;
         height: 100%;
       }
-
-
     }
 
     .cont_cinta_inicio {
@@ -2317,7 +2327,6 @@
             width: calc(1px + 20vw);
           }
 
-
           .imgplusdos {
             display: flex;
             justify-content: center;
@@ -2354,30 +2363,36 @@
           position: absolute;
           top: -300px;
           left: -200px;
-          animation: 10s infinite linear gradienanimate;
+          animation: 60s infinite linear gradienanimate;
         }
 
         .bold_dos {
           position: absolute;
           top: 10px;
           left: -400px;
-          animation: 10s infinite linear gradienanimate;
+          animation: 60s infinite linear gradienanimate;
         }
 
         .bold_tres {
           position: absolute;
           bottom: -600px;
           right: -400px;
-          animation: 10s infinite linear gradienanimate;
+          animation: 60s infinite linear gradienanimate;
         }
 
         .fondo_blur {
           width: 100vw;
           height: 100%;
-          background: repeating-radial-gradient(rgba(255, 255, 255, 0.02) 0 0.0001%,
-              rgba(238, 255, 0, 0.247) 0 0.0005%) 60% 60%/3000px 3000px,
-            repeating-conic-gradient(rgba(255, 255, 255, 0.02) 0 0.0001%,
-              rgba(255, 189, 7, 0.247) 0 0.0005%) 40% 40%/3000px 3000px;
+          background: repeating-radial-gradient(
+                rgba(255, 255, 255, 0.02) 0 0.0001%,
+                rgba(238, 255, 0, 0.247) 0 0.0005%
+              )
+              60% 60%/3000px 3000px,
+            repeating-conic-gradient(
+                rgba(255, 255, 255, 0.02) 0 0.0001%,
+                rgba(255, 189, 7, 0.247) 0 0.0005%
+              )
+              40% 40%/3000px 3000px;
           background-blend-mode: difference;
           animation: b 0.5s infinite alternate;
           backdrop-filter: blur(30px);
@@ -3105,7 +3120,6 @@
   }
 }
 
-
 @media (max-width: 720px) {
   .body__index {
     .conta_scroll_boton {
@@ -3181,7 +3195,7 @@
 
         h1 {
           margin-top: 1em;
-          color: #000;
+          color: #1d1d1d;
           text-align: center;
           font-family: MargoBeuys;
           font-size: calc(1px + 10vw);
@@ -3189,20 +3203,22 @@
           font-weight: 600;
           line-height: 136%;
           text-transform: uppercase;
+          text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.25);
 
           strong {
-            color: #000000;
+            color: #1d1d1d;
             font-family: "Bodoni Moda", serif;
             font-size: calc(1px + 10vw);
             font-style: italic;
             font-weight: 700;
             line-height: 136%;
             text-transform: uppercase;
+            text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.25);
           }
         }
 
         p {
-          color: #252525;
+          color: #1d1d1d;
           text-align: center;
           font-family: poppins;
           font-size: calc(1px + 4vw);
@@ -3210,13 +3226,14 @@
           font-weight: 400;
           line-height: normal;
           padding-bottom: 10px;
+          text-shadow: 0px 0px 5px rgba(255, 255, 255, 0.25);
         }
 
         .boton_setion_uno {
           display: flex;
           flex-direction: row;
           gap: 1em;
-  
+
           .boton_setion_uno_see {
             display: flex;
             width: 10em;
@@ -3225,7 +3242,7 @@
             align-items: center;
             gap: 10px;
             border-radius: 10px;
-            border: 1px solid #24252B;
+            border: 1px solid #24252b;
             background: #ffffff;
             color: #000;
             font-family: Gotham;
@@ -3234,7 +3251,7 @@
             font-weight: 300;
             line-height: normal;
           }
-  
+
           .boton_setion_uno_contac {
             display: flex;
             width: 10em;
@@ -3242,7 +3259,7 @@
             justify-content: center;
             align-items: center;
             gap: 10px;
-            color: #FFF;
+            color: #fff;
             font-family: poppins;
             font-size: 15px;
             font-style: normal;
@@ -3251,7 +3268,6 @@
             border-radius: 10px;
             background: #141414;
           }
-  
         }
 
         .cont_barra_contadores {
@@ -3269,7 +3285,7 @@
 
           div {
             display: flex;
-            align-items: start;
+            align-items: center;
             gap: 10px;
 
             img {
@@ -3277,7 +3293,7 @@
             }
 
             h4 {
-              color: #252525;
+              color: #1d1d1d;
               font-family: MargoBeuys;
               font-size: calc(1px + 7vw);
               font-style: normal;
@@ -3288,7 +3304,7 @@
             }
 
             p {
-              color: #252525;
+              color: #1d1d1d;
               font-family: MargoBeuys;
               font-size: calc(1px + 5vw);
               font-style: normal;
@@ -3328,7 +3344,7 @@
         position: absolute;
         top: -300px;
         left: -500px;
-        animation: 20s infinite linear gradienanimate;
+        animation: 60s infinite linear gradienanimate;
       }
 
       .bold_dos {
@@ -3337,7 +3353,7 @@
         position: absolute;
         top: 100px;
         left: -200px;
-        animation: 20s infinite linear gradienanimate;
+        animation: 60s infinite linear reverse gradienanimate;
       }
 
       .bold_tres {
@@ -3346,7 +3362,7 @@
         position: absolute;
         bottom: -500px;
         right: -400px;
-        animation: 20s infinite linear gradienanimate;
+        animation: 60s infinite linear gradienanimate;
       }
 
       .fondo_blur {
@@ -3354,10 +3370,16 @@
         z-index: 0;
         width: 100vw;
         height: 100%;
-        background: repeating-radial-gradient(rgba(255, 255, 255, 0) 0 0.0001%,
-            #ffffff00 0 0.0002%) 60% 60%/3000px 3000px,
-          repeating-conic-gradient(rgba(255, 255, 255, 0) 0 0.0001%,
-            #ffffff00 0 0.0002%) 40% 40%/3000px 3000px;
+        background: repeating-radial-gradient(
+              rgba(255, 255, 255, 0) 0 0.0001%,
+              #ffffff00 0 0.0002%
+            )
+            60% 60%/3000px 3000px,
+          repeating-conic-gradient(
+              rgba(255, 255, 255, 0) 0 0.0001%,
+              #ffffff00 0 0.0002%
+            )
+            40% 40%/3000px 3000px;
         background-blend-mode: difference;
         backdrop-filter: blur(30px);
       }
@@ -3934,7 +3956,6 @@
             width: calc(1px + 20vw);
           }
 
-
           .imgplusdos {
             width: calc(1px + 20vw);
           }
@@ -3969,32 +3990,48 @@
           position: absolute;
           top: -300px;
           left: -200px;
-          animation: 10s infinite linear gradienanimate;
+          animation: 60s infinite linear gradienanimate;
         }
 
         .bold_dos {
           position: absolute;
           top: 10px;
           left: -400px;
-          animation: 10s infinite linear gradienanimate;
+          animation: 60s infinite linear gradienanimate;
         }
 
         .bold_tres {
           position: absolute;
           bottom: -600px;
           right: -400px;
-          animation: 10s infinite linear gradienanimate;
+          animation: 60s infinite linear gradienanimate;
         }
 
         .fondo_blur {
+          display: none;
           width: 100vw;
           height: 100%;
-          background: repeating-radial-gradient(rgba(255, 255, 255, 0.02) 0 0.0001%,
-              rgba(238, 255, 0, 0.247) 0 0.0005%) 60% 60%/3000px 3000px,
-            repeating-conic-gradient(rgba(255, 255, 255, 0.02) 0 0.0001%,
-              rgba(255, 189, 7, 0.247) 0 0.0005%) 40% 40%/3000px 3000px;
+          background: repeating-radial-gradient(
+                rgba(255, 255, 255, 0.02) 0 0.0001%,
+                rgba(238, 255, 0, 0.247) 0 0.0005%
+              )
+              60% 60%/3000px 3000px,
+            repeating-conic-gradient(
+                rgba(255, 255, 255, 0.02) 0 0.0001%,
+                rgba(255, 189, 7, 0.247) 0 0.0005%
+              )
+              40% 40%/3000px 3000px;
           background-blend-mode: difference;
           animation: b 0.5s infinite alternate;
+          backdrop-filter: blur(30px);
+        }
+
+        .fondo_blur_movil {
+          display: flex;
+          z-index: 0;
+          width: 100vw;
+          height: 100%;
+          background-blend-mode: difference;
           backdrop-filter: blur(30px);
         }
       }
@@ -4720,7 +4757,6 @@
   }
 }
 
-
 @keyframes scrollderecha {
   0% {
     -webkit-transform: translatex(-5vw);
@@ -4784,12 +4820,12 @@
 @keyframes gradienanimate {
   0% {
     -webkit-transform: rotate(0deg);
-    transform: rotate(0deg);
+    transform: rotate(0deg) translateY(-10em);
   }
 
   100% {
     -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
+    transform: rotate(360deg) translateY(0em);
   }
 }
 
