prueba de responsive

--- a/sass/_plantillaproyectos.scss
+++ b/sass/_plantillaproyectos.scss
@@ -79,6 +79,12 @@
             height: 100%;
             flex-shrink: 0;
         }
+
+        .columdosuxw {
+            width: 50%;
+            height: 100%;
+            flex-shrink: 0;
+        }
     }
 
     .cont_cinta_plantilla {
