--- a/sass/_index.scss
+++ b/sass/_index.scss
@@ -214,22 +214,21 @@
       position: absolute;
       top: -400px;
       left: -300px;
-      animation: 60s infinite linear gradienanimate;
+      animation: 60s infinite linear  gradienanimate;
     }
 
     .bold_dos {
       position: absolute;
       top: 10px;
       left: -200px;
-      animation: 60s infinite linear gradienanimate;
+      animation: 60s infinite linear  gradienanimate;
     }
 
     .bold_tres {
-      transform: scale(1.5);
       position: absolute;
       bottom: -400px;
       right: -400px;
-      animation: 60s infinite linear alternate-reverse gradienanimate;
+      animation: 60s infinite linear reverse gradienanimate;
     }
 
     .fondo_blur {
@@ -625,6 +624,7 @@
             bottom: -10vh;
             height: 0%;
             opacity: 0;
+            width: 150vw;
             transform-origin: 0px 0%;
             transition: all 300ms;
             transition-delay: 0.1s;
@@ -633,6 +633,7 @@
             img {
               cursor: url("../assets/img/ir.svg") 15 10, auto;
               width: 30vw;
+
             }
           }
         }
@@ -3990,14 +3991,14 @@
           position: absolute;
           top: -300px;
           left: -200px;
-          animation: 60s infinite linear gradienanimate;
+          animation: 70s infinite linear gradienanimate;
         }
 
         .bold_dos {
           position: absolute;
           top: 10px;
           left: -400px;
-          animation: 60s infinite linear gradienanimate;
+          animation: 70s infinite linear gradienanimate;
         }
 
         .bold_tres {
@@ -4759,13 +4760,13 @@
 
 @keyframes scrollderecha {
   0% {
-    -webkit-transform: translatex(-5vw);
-    transform: translatex(-5vw);
+    -webkit-transform: translatex(-15vw);
+    transform: translatex(-15vw);
   }
 
   100% {
-    -webkit-transform: translatex(calc(-35vw * 1));
-    transform: translatex(calc(-35vw * 1));
+    -webkit-transform: translatex(calc(-30vw * 1));
+    transform: translatex(calc(-30vw * 1));
   }
 }
 
@@ -4819,13 +4820,18 @@
 
 @keyframes gradienanimate {
   0% {
-    -webkit-transform: rotate(0deg);
-    transform: rotate(0deg) translateY(-10em);
+    -webkit-transform: rotate(0deg) scale(0) ;
+    transform: rotate(0deg) scale(0);
+  }
+
+  50%{
+    -webkit-transform: rotate(180deg) scale(1.5) ;
+    transform: rotate(180deg) scale(1.5);
   }
 
   100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg) translateY(0em);
+    -webkit-transform: rotate(360deg) scale(0);
+    transform: rotate(360deg) scale(0);
   }
 }
 
