--- a/style/sass.css
+++ b/style/sass.css
@@ -4042,6 +4042,11 @@ body {
   height: 100%;
   flex-shrink: 0;
 }
+.body_plantilla .cont_inicio .columdosuxw {
+  width: 50%;
+  height: 100%;
+  flex-shrink: 0;
+}
 .body_plantilla .cont_cinta_plantilla {
   position: relative;
   width: 100%;
@@ -4467,11 +4472,10 @@ body {
   animation: 60s infinite linear gradienanimate;
 }
 .body__index .fondo_inicio .bold_tres {
-  transform: scale(1.5);
   position: absolute;
   bottom: -400px;
   right: -400px;
-  animation: 60s infinite linear alternate-reverse gradienanimate;
+  animation: 60s infinite linear reverse gradienanimate;
 }
 .body__index .fondo_inicio .fondo_blur {
   z-index: 5;
@@ -4816,6 +4820,7 @@ body {
   bottom: -10vh;
   height: 0%;
   opacity: 0;
+  width: 150vw;
   transform-origin: 0px 0%;
   transition: all 300ms;
   transition-delay: 0.1s;
@@ -7765,13 +7770,13 @@ body {
     position: absolute;
     top: -300px;
     left: -200px;
-    animation: 60s infinite linear gradienanimate;
+    animation: 70s infinite linear gradienanimate;
   }
   .body__index .cont_section_plus .fondo_plus .bold_dos {
     position: absolute;
     top: 10px;
     left: -400px;
-    animation: 60s infinite linear gradienanimate;
+    animation: 70s infinite linear gradienanimate;
   }
   .body__index .cont_section_plus .fondo_plus .bold_tres {
     position: absolute;
@@ -8429,10 +8434,10 @@ body {
 }
 @keyframes scrollderecha {
   0% {
-    transform: translatex(-5vw);
+    transform: translatex(-15vw);
   }
   100% {
-    transform: translatex(-35vw);
+    transform: translatex(-30vw);
   }
 }
 @keyframes scrollabajo {
@@ -8469,10 +8474,13 @@ body {
 }
 @keyframes gradienanimate {
   0% {
-    transform: rotate(0deg) translateY(-10em);
+    transform: rotate(0deg) scale(0);
+  }
+  50% {
+    transform: rotate(180deg) scale(1.5);
   }
   100% {
-    transform: rotate(360deg) translateY(0em);
+    transform: rotate(360deg) scale(0);
   }
 }
 @keyframes b {
