add ajustes en menu lista uno

--- a/sass/_plantillaproyectos.scss
+++ b/sass/_plantillaproyectos.scss
@@ -248,7 +248,7 @@
                     transform: scale(0.8);
                     rotate: 20deg;
                     position: absolute;
-                    top: -1em;
+                    top: -4em;
                     right: 1em;
 
                     img {}
@@ -272,6 +272,10 @@
             }
 
             .columdos {
+                width: 100%;
+                height: 50%;
+            }
+            .columdosuxw {
                 width: 100%;
                 height: 50%;
             }
