--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -256,7 +256,7 @@ p {
           .flachamenu {
             width: 0%;
             border-radius: 0px;
-            background: #b2d9ff;
+            background: #fbff00;
             transform-origin: 0px 100%;
             transition: all 900ms;
             transition-delay: 0.1s;
@@ -422,7 +422,7 @@ p {
           .flachamenu {
             width: 0%;
             border-radius: 0px;
-            background: #b2d9ff;
+            background: #fbff00;
             transform-origin: 0px 100%;
             transition: all 900ms;
             transition-delay: 0.1s;
@@ -865,7 +865,7 @@ p {
             .flachamenu {
               width: 0%;
               border-radius: 0px;
-              background: #b2d9ff;
+              background: #fbff00;
               transform-origin: 0px 100%;
               transition: all 900ms;
               transition-delay: 0.1s;
@@ -912,7 +912,7 @@ p {
               transform: scale(1);
               padding: 0.5em 2em;
               border-radius: 200px;
-              background: #b2d9ff;
+              background: #fbff00;
               margin-right: 20px;
             }
 
@@ -1034,7 +1034,7 @@ p {
             .flachamenu {
               width: 0%;
               border-radius: 0px;
-              background: #b2d9ff;
+              background: #fbff00;
               transform-origin: 0px 100%;
               transition: all 900ms;
               transition-delay: 0.1s;
@@ -1078,7 +1078,7 @@ p {
               transform: scale(1);
               padding: 0.5em 2em;
               border-radius: 200px;
-              background: #b2d9ff;
+              background: #fbff00;
               margin-right: 20px;
             }
 
